--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Triggui App</title>
+  <title>TrigguiApp – Tu portal de pausa</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,13 +11,19 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: white;
+      background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      color: #e6e6ea;
       overflow: hidden;
       transition: background 1s ease;
     }
     body.dark { background: #000; }
 
-    .main { height: 100dvh; display: flex; flex-direction: column; }
+    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.6s ease forwards; }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
     .grid {
       flex: 1;
@@ -41,14 +47,20 @@
       text-align: center;
       border-radius: 16px;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       color: white;
       position: relative;
       background-size: cover;
       background-position: center;
       cursor: pointer;
-      transition: all 0.3s ease;
+      transition: all 0.5s ease;
       overflow: hidden;
+      transform: scale(0.8);
+      opacity: 0;
+      animation: scaleFadeIn 1.6s forwards;
+    }
+    @keyframes scaleFadeIn {
+      to { transform: scale(1); opacity: 1; }
     }
 
     .block-content {
@@ -98,7 +110,6 @@
       display: block;
       transition: transform 0.4s ease;
     }
-
     .portada-wrapper img:hover {
       transform: scale(1.02);
     }
@@ -185,54 +196,33 @@ const el = id => document.getElementById(id);
 const bloques = ["detente", "lee", "pregunta", "conecta"];
 const colores = ["bg1", "bg2", "bg3", "bg4"];
 
-// Heurística por hora
 const hora = new Date().getHours();
 let libroIndex = 0;
-if (hora >= 6 && hora < 12) libroIndex = 1;         // Mañana: Working Backwards
-else if (hora >= 12 && hora < 18) libroIndex = 3;    // Tarde: La magia concentración
-else if (hora >= 18 && hora < 24) libroIndex = 2;    // Noche: Leyes naturaleza humana
-else libroIndex = 0;                                 // Madrugada: Los Fundadores
+if (hora >= 6 && hora < 12) libroIndex = 1; // Mañana
+else if (hora >= 12 && hora < 18) libroIndex = 3; // Tarde
+else if (hora >= 18 && hora < 24) libroIndex = 2; // Noche
+else libroIndex = 0; // Madrugada
 
 const libros = [
   {
     portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1678027798i/123116666.jpg",
-    frases: [
-      "🚀 Aprende de los errores temprano",
-      "🧠 Piensa como un fundador",
-      "⚙️ Construye lo que nadie ve aún",
-      "📈 Escala con mentalidad brutal"
-    ],
-    fondo: "#140038"
+    fondo: "#140038",
+    frases: ["🚀 Aprende de los errores temprano", "🧠 Piensa como un fundador", "⚙️ Construye lo que nadie ve aún", "📈 Escala con mentalidad brutal"]
   },
   {
     portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1606707026i/53138083.jpg",
-    frases: [
-      "🔍 Enfócate en el cliente",
-      "📊 Mide lo correcto",
-      "🧱 Construye hacia atrás",
-      "🚪 Di 'no' a lo que distrae"
-    ],
-    fondo: "#001f3f"
+    fondo: "#001f3f",
+    frases: ["🔍 Enfócate en el cliente", "📊 Mide lo correcto", "🧱 Construye hacia atrás", "🚪 Di 'no' a lo que distrae"]
   },
   {
     portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg",
-    frases: [
-      "🧠 Conoce la naturaleza humana",
-      "🎭 Domina tus impulsos",
-      "👁️ Lee a las personas",
-      "🔓 Descifra el poder real"
-    ],
-    fondo: "#111111"
+    fondo: "#111111",
+    frases: ["🧠 Conoce la naturaleza humana", "🎭 Domina tus impulsos", "👁️ Lee a las personas", "🔓 Descifra el poder real"]
   },
   {
     portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1604385988i/55729446.jpg",
-    frases: [
-      "🎯 Elimina distracciones",
-      "🌿 Cultiva presencia profunda",
-      "🧘‍♂️ Un foco = mil logros",
-      "🔕 Apaga el ruido del mundo"
-    ],
-    fondo: "#003300"
+    fondo: "#003300",
+    frases: ["🎯 Elimina distracciones", "🌿 Cultiva presencia profunda", "🧘‍♂️ Un foco = mil logros", "🔕 Apaga el ruido del mundo"]
   }
 ];
 
