--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,7 @@
       justify-content: center;
       align-items: center;
       animation: flotar 8s ease-in-out infinite;
+      background: transparent;
     }
 
     .portada-wrapper img {
@@ -259,6 +260,7 @@ function revelarTodo() {
     const block = el(nombre);
     block.innerHTML = '';
     if (nombre === bloquePortada) {
+      block.style.background = 'none';
       const wrapper = document.createElement("div");
       wrapper.className = "portada-wrapper";
 
