--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Una Página, Una Vida Nueva</title>
+  <title>TrigguiApp – La Pausa que Cambia Todo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -97,7 +97,6 @@
     .bg2 { background: linear-gradient(135deg, #6a11cb, #2575fc); }
     .bg3 { background: linear-gradient(135deg, #43cea2, #185a9d); }
     .bg4 { background: linear-gradient(135deg, #ee9ca7, #ffdde1); }
-    .bg5 { background: linear-gradient(135deg, #ff9a9e, #fad0c4); }
 
     .portada-wrapper {
       width: 100%;
@@ -203,14 +202,13 @@
 <script>
 const el = id => document.getElementById(id);
 
-const bloques = ["pausa", "descubre", "reflexiona", "siente", "crea"];
-const colores = ["bg1", "bg2", "bg3", "bg4", "bg5"];
+const bloques = ["pausa", "descubre", "reflexiona", "siente"];
+const colores = ["bg1", "bg2", "bg3", "bg4"];
 const accionables = [
-  "🌟 La genialidad se cultiva en lo invisible.",
-  "🧠 Atreverse a pensar distinto es el primer acto de sabiduría.",
-  "🚀 Crear sin permiso: tu voz importa.",
-  "🏔️ De bueno a extraordinario: cruza el abismo.",
-  "⏳ El tiempo correcto existe. Alinea tus pasos."
+  "🌟 Encuentra en lo pequeño el ritual que forma a los genios. (Craig Wright)",
+  "🔎 ¿Qué creencia limitante estás dispuesto a cuestionar hoy? (Adam Grant)",
+  "🚀 Crea algo imperfecto, pero que viva. No esperes permiso. (Tony Fadell)",
+  "🏔️ No sigas siendo bueno. Construye lo que el mundo nunca ha visto. (Jim Collins)"
 ];
 
 const libros = [
@@ -229,10 +227,6 @@ const libros = [
   {
     portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",
     fondo: "#003300"
-  },
-  {
-    portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1544822311i/43163538.jpg",
-    fondo: "#333300"
   }
 ];
 
